--- a/kmm_mvikotlin_sample/gradle.properties
+++ b/kmm_mvikotlin_sample/gradle.properties
@@ -6,8 +6,13 @@ kotlin.code.style=official
 
 #Android
 android.useAndroidX=true
+android.enableJetifier=false
 
 #MPP
 kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
 kotlin.mpp.enableCInteropCommonization=true
+
+#Gradle
+org.gradle.parallel=true
+org.gradle.caching=true
