enabled native memory model

--- a/kmm_mvikotlin_sample/gradle.properties
+++ b/kmm_mvikotlin_sample/gradle.properties
@@ -11,6 +11,8 @@ android.enableJetifier=false
 #MPP
 kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
+kotlin.native.binary.freezing=disabled
+kotlin.native.binary.memoryModel=experimental
 kotlin.mpp.enableCInteropCommonization=true
 
 #Gradle
